# lego_image_converter

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_color_or_set.md
.github/workflows/: ci.yml  release.yml
lego_image_converter/: __init__.py  config.py  utility.py
src/legopic/: __init__.py
src/legopic/core/: __init__.py  config.py  downsize.py  export.py  match_color.py  session.py
src/legopic/data/: __init__.py  colors.csv  elements.csv  loader.py  sets.csv
src/legopic/models/: __init__.py  bom_entry.py  canvas.py  cell.py  cell_data.py  color.py  element.py  palette.py
src/legopic/pipeline/: __init__.py  color_utils.py  context.py  pipeline.py
src/legopic/pipeline/steps/: __init__.py  base.py  dither.py  pool.py  quantize.py
src/mosaicpic/: __init__.py
src/mosaicpic/core/: __init__.py  assignment.py  export.py  loader.py  match_color.py  session.py
src/mosaicpic/data/: __init__.py  elements.csv  loader.py  sets.csv
src/mosaicpic/models/: __init__.py  canvas.py  cell.py  color.py  element.py  image.py  palette.py
src/mosaicpic/pipeline/: __init__.py  config.py  profiles.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_real_images.py  test_session.py
tests/unit/: __init__.py  test_assignment.py  test_canvas.py  test_cell.py  test_color.py  test_color_utils.py  test_config.py  test_data_integrity.py  test_downsize.py  test_element.py  test_export.py  test_export_models.py  test_image.py  test_match_color.py  test_palette.py  test_pipeline.py  test_pipeline_steps.py  test_pipeline_types.py  test_profiles.py
tests/utilities/: __init__.py  visualize.py
