[project]
name = "legopic"
version = "0.4.1"
description = "Convert images to Lego mosaic patterns with perceptual color matching"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zequn Li", email = "zequn1992@gmail.com" }
]
keywords = ["lego", "image", "8bit", "pixel", "art", "mosaic", "color-matching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Artistic Software",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "numpy>=1.24",
    "pillow>=9.0",
    "basic_colormath>=0.1",
]

[project.urls]
Homepage = "https://github.com/zl3311/lego_image_converter"
Repository = "https://github.com/zl3311/lego_image_converter"
Issues = "https://github.com/zl3311/lego_image_converter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legopic"]

[tool.hatch.build.targets.sdist]
include = [
    "src/legopic/**",
    "tests/**",
    "README.md",
    "LICENSE",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-requests>=2.28",
    "svgwrite>=1.4",
    "matplotlib>=3.7",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["legopic"]

# Mypy configuration (type checker)
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["legopic"]

[[tool.mypy.overrides]]
module = [
    "basic_colormath.*",
    "PIL.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/legopic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
